<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_bn" />
        <item
            android:id="@+id/nav_picture"
            android:icon="@drawable/ic_photo"
            android:title="@string/picture_bn" />
        <item
            android:id="@+id/nav_song"
            android:icon="@drawable/ic_mp3_player"
            android:title="@string/song_bn" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_youtube"
            android:title="@string/video_bn" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper"
            android:title="@string/news_bn" />
    </group>
</menu>

