<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/picture_bn"
                android:textColor="@color/colorPrimaryDark75"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/drop_shadow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/picture_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:visibility="gone" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/picture_loader"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/loader" />
                <TextView
                    android:id="@+id/picture_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Data"
                    android:visibility="gone"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/song_bn"
                android:textColor="@color/colorPrimaryDark75"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/drop_shadow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/song_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:visibility="gone" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/song_loader"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/loader" />
                <TextView
                    android:id="@+id/song_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Data"
                    android:visibility="gone"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/video_bn"
                android:textColor="@color/colorPrimaryDark75"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/drop_shadow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/video_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:visibility="gone" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/video_loader"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/loader" />
                <TextView
                    android:id="@+id/video_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Data"
                    android:visibility="gone"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:text="@string/news_bn"
                android:textColor="@color/colorPrimaryDark75"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/drop_shadow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/news_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#fff"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:visibility="gone" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/news_loader"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/loader" />

                <TextView
                    android:id="@+id/news_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No Data"
                    android:visibility="gone"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>